@@ -964,6 +964,9 @@ Release 2.8.0 - UNRELEASED
     HADOOP-10615. FileInputStream in JenkinsHash#main() is never closed.
     (Chen He via ozawa)
 
+    HADOOP-12240. Fix tests requiring native library to be skipped in non-native
+    profile. (Masatake Iwasaki via ozawa)
+
 Release 2.7.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
